tests/baselines/reference/abstractPropertyInitializer.errors.txt
abstractPropertyInitializer.ts(2,14): error TS1267: Property 'prop' cannot have an initializer because it is marked abstract.


==== abstractPropertyInitializer.ts (1 errors) ====
    abstract class C {
        abstract prop = 1
                 ~~~~
!!! error TS1267: Property 'prop' cannot have an initializer because it is marked abstract.
    }
    